samples/_failures_safe/1761518137_1d4d98_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8ebc224.c: In function ‘main’:
./samples/SAFE/__tmp_a8ebc224.c:146:13: error: expected identifier or ‘(’ at end of input
  146 |             int
      |             ^~~
./samples/SAFE/__tmp_a8ebc224.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a8ebc224.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a8ebc224.c:146:13: error: expected declaration or statement at end of input
